02_sg/main.tf

#When ever we create a new module we have to do terrafrom init
module "vpn" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_vpc.default.id
    sg_name = "vpn"
    sg_description = "SecurityGroup for vpn"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}
module "mongodb" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "mongodb"
    sg_description = "SecurityGroup for mongodb"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "redis" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "redis"
    sg_description = "SecurityGroup for redis"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "mysql" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "mysql"
    sg_description = "SecurityGroup for mysql"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "rabbitmq" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "rabbitmq"
    sg_description = "SecurityGroup for rabbitmq"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "cart" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "cart"
    sg_description = "SecurityGroup for cart"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "shipping" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "shipping"
    sg_description = "SecurityGroup for shipping"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "payment" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "payment"
    sg_description = "SecurityGroup for payment"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "web" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "web"
    sg_description = "SecurityGroup for web"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "catalogue" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_vpc.default.id
    sg_name = "catalogue"
    sg_description = "SecurityGroup for catalogue"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "user" {
    source = "../../09_Terraform_Modules/02_sg_module"
    project_name = var.project_name
    environment = var.environment
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    sg_name = "user"
    sg_description = "SecurityGroup for user"
    #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

#Openvpn
resource "aws_security_group_rule" "vpn_home" {
  security_group_id = module.vpn.sg_id
  type                     = "ingress"
  from_port                = 0
  to_port                  = 65535
  protocol                 = "-1"
  cidr_blocks        = ["0.0.0.0/0"] #Usually we give home public ip address but here the ip changes frequently
}

resource "aws_security_group_rule" "mongodb_vpn" {
  source_security_group_id = module.vpn.sg_id
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = module.mongodb.sg_id
}

#mongodb accepting connections from catalogue instance
#We are adding a rule in mongodb sg group to allow 27017 port to catalogue ip/sg group
resource "aws_security_group_rule" "mongodb_catalogue" {
  source_security_group_id = module.catalogue.sg_id
  type                     = "ingress"
  from_port                = 27017 #mongodb port 
  to_port                  = 27017
  protocol                 = "tcp"
  security_group_id        = module.mongodb.sg_id
}

#mongodb accepting connections from user instance
resource "aws_security_group_rule" "mongodb_user" {
  source_security_group_id = module.user.sg_id
  type                     = "ingress"
  from_port                = 27017
  to_port                  = 27017
  protocol                 = "tcp"
  security_group_id        = module.mongodb.sg_id
}

#redis is accepting connections from cart instance
#We are adding a rule in redis sg group to allow 6379 port to cart ip/sg group
resource "aws_security_group_rule" "redis_cart" {
  source_security_group_id = module.cart.sg_id
  type                     = "ingress"
  from_port                = 6379 #redis port 
  to_port                  = 6379
  protocol                 = "tcp"
  security_group_id        = module.redis.sg_id
}

#redis is accepting connections from user instance
resource "aws_security_group_rule" "redis_user" {
  source_security_group_id = module.user.sg_id
  type                     = "ingress"
  from_port                = 6379
  to_port                  = 6379
  protocol                 = "tcp"
  security_group_id        = module.redis.sg_id
}
